fix update breaks in frontend

--- a/implementation/public/stylesheets/comeandgo.css
+++ b/implementation/public/stylesheets/comeandgo.css
@@ -132,6 +132,10 @@ nav.top-nav .page-title {
     height: 100%;
 }
 
+.modal-break form {
+    padding: 12px;
+}
+
 .notification-list .button-container {
     padding: 0px 18px 0px 18px;
 }
